--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,5 +1,13 @@
 <import src="movie-list-template/movie-list-template.wxml" />
-<view class="container">
+<import src="movie-more/movie-grid-template/movie-grid-template.wxml" />
+
+<view class="search">
+    <icon type="search" size="15" class="search-img" />
+    <input type="text" placeholder="长城" bindfocus="onBindFocus" bindblur="onBindBlur" bindinput="onBindInput" />
+    <icon type="clear" size="15" class="xx-img" bindtap="onCancelBlurTap" />
+</view>
+
+<view class="container" wx:if="{{containerShow}}">
     <view class="movies-template">
         <template is="moviesListTemplate" data="{{...coming_soon}}"></template>
     </view>
@@ -10,3 +18,8 @@
         <template is="moviesListTemplate" data="{{...top250}}"></template>
     </view>
 </view>
+
+<view class="searchPanner"  wx:if="{{searchPannerShow}}">
+    <template is="movieGridTemplate" data="{{...searchData}}"></template>
+</view>
+
