--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,8 +1,27 @@
 @import "movie-list-template/movie-list-template.wxss";
+@import "movie-more/movie-grid-template/movie-grid-template.wxss";
 
 .container{
     background-color: #f1f1f1;
 }
 .movies-template{
     margin-bottom: 30rpx;
+}
+
+.search {
+    width: 100%;
+    height: 60rpx;
+    display: flex;
+    flex-direction: row;
+    background-color: #eee;
+    padding: 10rpx 20rpx;
+}
+.search icon {
+    margin: auto 0;
+}
+.search input {
+    flex-basis: 80%;
+    font-size: 30rpx;
+    padding: 0 20rpx;
+    line-height: 60rpx;
 }
