--- a/pages/movie-list/movie-container/movie-container.wxml
+++ b/pages/movie-list/movie-container/movie-container.wxml
@@ -4,6 +4,6 @@
     <view class="movie-container" data-movieid="{{movieId}}">
         <image class="movie-img" src="{{ coverageUrl }}"></image>
         <text class="movie-title">{{ title }}</text>
-        <template is="starTemplate" data="{{ star:stars, score: average }}"></template>
+        <template is="starTemplate" data="{{ stars:stars, score: average }}"></template>
     </view>
 </template>
