--- a/pages/movie-list/movie-list.wxml
+++ b/pages/movie-list/movie-list.wxml
@@ -3,11 +3,11 @@
 <template name="movieList">
     <view class="category-container">
         <view class="category-title">
-            <text class="category-name">{{ BeiJingMovie.categorytitle }}热映</text>
+            <text class="category-name">{{ categorytitle }}</text>
             <text class="more">更多></text>
         </view>
         <view class="movie-list">
-            <block wx:for="{{ BeiJingMovie.movies }}" wx:key="index" wx:for-item="movie">
+            <block wx:for="{{ movies }}" wx:key="key" wx:for-item="movie">
                 <template is="movieContainer" data="{{...movie}}"></template>
             </block>
         </view>
