--- a/pages/movie-list/movie-list.wxss
+++ b/pages/movie-list/movie-list.wxss
@@ -17,12 +17,13 @@
     line-height: 50rpx;
 }
 .category-title .category-name {
-    font-size: 34rpx;
+    font-size: 30rpx;
     color: #25c88a;
+    padding-left: 10rpx;
 }
 .category-title .more {
     text-align: right;
-    font-size: 26rpx;
+    font-size: 24rpx;
     color: #999;
 }
 
