--- a/pages/index.wxml
+++ b/pages/index.wxml
@@ -5,7 +5,7 @@
 
     <template is="swiper" data="{{ swiperData }}"></template>
 
-    <view class="search">
+    <view class="search" bindtap="goSearch">
         <view class="search-text">
             <icon class="weui-icon-search_in-box search-icon" type="search" size="14"></icon>
             搜 索
