--- a/pages/top250/top250.wxml
+++ b/pages/top250/top250.wxml
@@ -5,16 +5,13 @@
 
     <template is="swiper" data="{{ swiperData }}"></template>
 
-    <view class="search">
+    <view class="search" bindtap="goSearch">
         <view class="search-text">
             <icon class="weui-icon-search_in-box search-icon" type="search" size="14"></icon>
             搜 索
         </view>
     </view>
     
-    <template is="movieList" data="{{ ...actionMovie }}"></template>
-    <template is="movieList" data="{{ ...loveMovie }}"></template>
-    <template is="movieList" data="{{ ...comedyMovie }}"></template>
-    <template is="movieList" data="{{ ...scienceFictionMovie }}"></template>
+    <template is="movieList" data="{{ ...top250Movie }}"></template>
 
 </view>
