accomplish list Page

--- a/pages/movie-list/movie-container/movie-container.wxml
+++ b/pages/movie-list/movie-container/movie-container.wxml
@@ -1,7 +1,7 @@
 <import src="../star/star.wxml" />
 
 <template name="movieContainer">
-    <view class="movie-container" data-movieid="{{movieId}}">
+    <view class="movie-container" catchtap="onMovieDetailTap" data-movieid="{{movieId}}">
         <image class="movie-img" src="{{ coverageUrl }}"></image>
         <text class="movie-title">{{ title }}</text>
         <template is="starTemplate" data="{{ stars:stars, score: average }}"></template>
