--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -4,10 +4,10 @@
 
     <view class="type-btn-container">
         <block wx:for="{{movieType}}" wx:key="key" wx:for-item="type">
-            <button class="{{ type == isActive ? 'active':''}}
+            <text class="{{ type == isActive ? 'active':''}}
                 data-type="{{ type }}" 
                 bindtap="searchMovieType"
-            >{{ type }}</button>
+            >{{ type }}</text>
         </block>
     </view>
 
